--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="assets/css/style.css" />
-  <title>Varad Bhogayata | Software Developer</title>
+  <title>James Rota | Software Developer</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -41,7 +41,6 @@
   <meta property="og:site_name" content="James Rota | Software Developer" />
   <meta property="article:publisher" content="https://jmsrota.github.io/GitHub-portfolio/" />
   <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
-  <!-- Twitter -->
   <meta name="author" content="Varad Bhogayata" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png" />
@@ -210,7 +209,7 @@
               <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
             </div>
             <div class="social">
-              <a href="linkedin.com/in/james-rota-034a57149" target="_blank">
+              <a href="linkedin.com/in/james-rota" target="_blank">
                 <button class="icon-btn linkedin">
                   <i class="fa fa-linkedin"></i>
                 </button>
@@ -255,7 +254,7 @@
           </h2>
         </blockquote> -->        
         <p>
-          I am a Computer Science Grad Student at Arizona State University. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
+          I am a Computer Science Grad Student at the Universoty of Alberta. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
 
           I have worked on technologies like Python, Django, Flask, MySQL, PostgreSQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's. I have 19 months of professional work experience which helped me strengthen my experience in Python, Flask, and Django.
 
@@ -264,10 +263,10 @@
         <p>
           <ul>
             <li><b>Languages:</b> Python, Java, JavaScript, C, C++, HTML/CSS, Bash</li>
-            <li><b>Databases:</b> MySQL, PostgreSQL, MongoDB</li>
-            <li><b>Libraries:</b> NumPy, Pandas, OpenCV</li>
-            <li><b>Frameworks:</b> Flask, Django, Node.js, Keras, TensorFlow, PyTorch, Bootstrap, Apache Beam</li>
-            <li><b>Tools & Technologies:</b> Git, Docker, AWS, GCP, Heroku, JIRA</li>
+            <li><b>Databases:</b> MySQL, MongoDB </li>
+            <li><b>Libraries:</b> NumPy, Pandas </li>
+            <li><b>Frameworks:</b> Flask, Node.js, Keras, TensorFlow, PyTorch, Bootstrap </li>
+            <li><b>Tools & Technologies:</b> Git </li>
           </ul>
           
         </p>
