--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           </h2>
         </blockquote> -->        
         <p>
-          I am a Computer Science Grad Student at the Universoty of Alberta. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
+          I am a Computer Science Grad Student at the University of Alberta. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
 
           I have worked on technologies like Python, Django, Flask, MySQL, PostgreSQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's. I have 19 months of professional work experience which helped me strengthen my experience in Python, Flask, and Django.
 
