--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
         <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
             class="mdi-social-person small"></i><span>About</span></a>
       </li>
-      <li class="bold">
+    <!--<li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
           class="waves-effect waves-dark teal-text"><i
             class="mdi-action-trending-up small"></i><span>Experience</span></a>
-      </li>
+      </li>-->
       <li class="bold">
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
             class="mdi-av-my-library-books small"></i><span>Projects</span></a>
@@ -187,7 +187,7 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Open Varad's Resume in a new tab"
+        <a aria-label="Open James' Resume in a new tab"
           href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
@@ -254,11 +254,12 @@
           </h2>
         </blockquote> -->        
         <p>
-          I am a Computer Science Grad Student at the University of Alberta. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
-
-          I have worked on technologies like Python, Django, Flask, MySQL, PostgreSQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's. I have 19 months of professional work experience which helped me strengthen my experience in Python, Flask, and Django.
-
-          I am passionate about developing complex applications that solve real-world problems impacting millions of users.
+          I am a recent Computer Science graduate from the University of Alberta (Augustana Campus), 
+          with a strong foundation in both front and back end development. Through my academic projects, 
+          I have gained hands-on experience in building applications from scratch, managing time-effective projects, 
+          and collaborating effectively in teams. I am passionate about solving complex technical problems and eager to 
+          contribute to dynamic development teams. My goal is to apply my skills in a professional setting where 
+          I can grow as a software developer.
         </p>
         <p>
           <ul>
