Added profile picture and removed experience tab.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="assets/img/passport-new.jpg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="assets/img/Profile_Picture.jpeg" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
@@ -87,11 +87,11 @@
         <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
             class="mdi-social-person small"></i><span>About</span></a>
       </li>
-      <li class="bold">
+     <!--<li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
           class="waves-effect waves-dark teal-text"><i
             class="mdi-action-trending-up small"></i><span>Experience</span></a>
-      </li>
+      </li>-->
 
       <li class="bold">
         <!-- mdi-av-web small
@@ -277,7 +277,7 @@
           Detail-oriented Software Developer with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
         </p> -->
         <p>
-          Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.
+          Looking for an opportunity to enter the work force in a position which provides professional development, interesting experiences and personal growth.
         </p>
         <!-- <p>
           Another Paragraph
