--- a/index.html
+++ b/index.html
@@ -317,22 +317,16 @@
             <h4 class="brown-text light">Languages and Databases</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
+                <img alt="" src="assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
+                <img alt="" src="assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
+                <img alt="" src="assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
+                <img alt="" src="assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
               </div>
             </div>
           </div>
@@ -343,19 +337,16 @@
             <h4 class="brown-text light">Libraries</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
+                <img alt="" src="assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
+                <img alt="" src="assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
+                <img alt="" src="assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
+                <img alt="" src="assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
               </div>
             </div>
           </div>
@@ -367,22 +358,19 @@
             <h4 class="brown-text light">Frameworks</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/django-logo.webp" class="responsive-img" />Django
+                <img alt="" src="assets/img/flask-logo.png" class="responsive-img" />Flask
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
+                <img alt="" src="assets/img/bootstrap.png" class="responsive-img" />Bootstrap
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
+                <img alt="" src="assets/img/keras-logo.png" class="responsive-img" />Keras
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
+                <img alt="" src="assets/img/tensorflow-logo-1.png" class="responsive-img" />TensorFlow
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" />TensorFlow
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
+                <img alt="" src="assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
               </div>
             </div>
           </div>
@@ -396,13 +384,7 @@
 
 
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
+                <img alt="" src="assets/img/git.png" class="responsive-img" />Git
               </div>
             </div>
           </div>
@@ -459,18 +441,17 @@
                 </p>
                 <p class="brown-text">Tempe, USA</p>
                 <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
+                  <b>Degree: </b>Bachelor of Science in Computer Science      
                   <br>
-                  <b>CGPA: </b>4.0/4.0
                 </p>
 
                 <ul>
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>                    
+                    <li>Software Engineering I</li>
+                    <li>Software Engineering II</li>
+                    <li>Database Management Systems</li>                    
                   </ul>
                   </p>
 
