--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h2>Hi, I'm <span class="teal">James Rota.</span></h2>
-              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color: #2e94b9"></span></h5>
+              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color: #475053"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
             </div>
@@ -437,9 +437,9 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
+                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">University of Alberta</a></span>
                 </p>
-                <p class="brown-text">Tempe, USA</p>
+                <p class="brown-text">Camrose, Canada</p>
                 <p>
                   <b>Degree: </b>Bachelor of Science in Computer Science      
                   <br>
