--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="assets/img/Profile_Picture.jpeg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="assets/img/Profile_Picture.jpeg" class="img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
