Changes to colors

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <meta property="og:site_name" content="James Rota | Software Developer" />
   <meta property="article:publisher" content="https://jmsrota.github.io/GitHub-portfolio/" />
   <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
-  <meta name="author" content="Varad Bhogayata" />
+  <meta name="author" content="James Rota" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png" />
