Changed color and javascript text

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h2>Hi, I'm <span class="teal">James Rota.</span></h2>
-              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color: #475053"></span></h5>
+              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color: #2e94b9"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
             </div>
@@ -474,7 +474,7 @@
         <p>
           <a aria-label="Email James" href="mailto:jmsrota@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email James" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:jmsrota@gmail.com"
+              class="fa fa-envelope"></i><a aria-label="Email James" href="mailto:jmsrota@gmail.com"
               class="hoverline">jmsrota@gmail.com</a></a>
         </p>
         <p>
@@ -486,7 +486,7 @@
         </p>
         <p>
           <a aria-label="View James on LinkedIn" href="https://linkedin.com/in/james-rota-034a57149" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+            data-position="top" data-tooltip="View James on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
               class="fa fa-linkedin"></i><a aria-label="James on LinkedIn" href="https://linkedin.com/in/james-rota-034a57149"
               class="hoverline" target="_blank">linkedin.com/in/james-rota-034a57149</a></a>
@@ -499,7 +499,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "Developer", "Fast Learner"],
+      strings: ["Developer", "Agile Thinker","Adaptable Learner"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
