--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open James' resume in a new tab" href="https://jmsrota.github.io/GitHub-portfolio/assets/resume/Resume_Revised_2024_JamesRota.pdf" target="_blank"
+        <a aria-label="Open James' resume in a new tab" href="https://jmsrota.github.io/GitHub-portfolio/assets/resume/JamesRota_2024.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -153,7 +153,7 @@
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
       <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">James 
-        Rota</a><span class="black-text">Software Developer</span>
+        Rota</a><span class="black-text">Developer</span>
     </div>
   </nav>
 
@@ -204,7 +204,7 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h2>Hi, I'm <span class="teal">James Rota.</span></h2>
-              <h5 style="color:#fff"><span class="typing" style="font-weight: 300; color: #2e94b9"></span></h5>
+              <h5 style="color:#fff"><span class="typing" style="font-weight: 300; color: #475053"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
             </div>
@@ -294,9 +294,9 @@
     </section>
 
 <!-- Third Section: Experience-->
-    <section id="experience" class="section scrollspy">
+    <!--<section id="experience" class="section scrollspy">
       <h3 class="page-title white-text teal">Experience</h3>
-      <div class="container"></div>
+      <div class="container"></div>-->
 
         <!-- Add when you have experience! -->
 
@@ -304,6 +304,41 @@
     <section id="projects" class="section scrollspy">
       <h3 class="page-title white-text teal">Projects</h3>
       <div class="container"></div>
+
+          <!-- 1. Music Recommender Project -->
+          <div class="col s12 m6 l6">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Music Recommender" src="/assets/img/project-library-logo.png" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Music Recommender<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  An AI based project using Content-Based filtering, type in genres, artists or songs and get recommended top 5 songs based on user preferences.
+                </p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> CSS, HTML, Python, Numpy, Pandas, Skikit-learn</li>
+                  <li>Users can view list of recommended songs based on input</li>
+                </ul>
+                <div class="card-action">
+                  <!--<a aria-label="Visit " href="https://django-local-lib.herokuapp.com" target="_blank" data-position="top"
+                    data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-external-link"></i></a>-->
+                  <a aria-label="Visit the GitHub repo for project" href="https://github.com/jmsrota/MusicPrediction"
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
       <!-- add projects here-->
     </section>
 
