Format text error

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <span class="card-title activator teal-text hoverline">Music Recommender<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  An AI based project using Content-Based filtering, type in genres, artists or songs and get recommended top 5 songs based on user preferences.
+                  An AI based project using Content-Based filtering. Type in genres, artists or songs and get recommended top 5 songs based on user preferences.
                 </p>
               </div>
               <div class="card-reveal">
