--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
       <div class="container"></div>
 
           <!-- 1. Music Recommender Project -->
+        <div class = "row">
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -338,6 +339,7 @@
               </div>
             </div>
           </div>
+        </div>
 
       <!-- add projects here-->
     </section>
