--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           <!-- 1. Music Recommender Project -->
         <div class = "row">
           <div class="col s12 m6 l6">
-            <div class="card medium">
+            <div class="card small">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Music Recommender" src="assets/img/Music.png" style="height: 100%; width: 100%" class="activator" />
               </div>
