Changed width of icon picture.

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
           <div class="col s12 m6 l6">
             <div class="card small">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Music Recommender" src="assets/img/Music.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Music Recommender" src="assets/img/Music.png" style="height: 100%; width: auto" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Music Recommender<i
