--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">James Rota.</span></h2>
+              <h2 id = "Introduction">Hi, I'm James Rota.</h2>
               <h5 style="color:#fff"><span class="typing" style="font-weight: 300; color: #475053"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
+              <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving complex and challenging real-world problems.</h5>
             </div>
             <div class="social">
               <a href="https://linkedin.com/in/james-rota-034a57149" target="_blank">
