added display: inline

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2 id = "Introduction"><span style = "background-color: #f0fbff; color: #475053;" >Hi, I'm James Rota.</span></h2>
+              <h2 id = "Introduction"><span style = "background-color: #f0fbff; color: #475053; display: inline;" >Hi, I'm James Rota.</span></h2>
               <h5 style="color:#fff"><span class="typing" style="font-weight: 300; color: #475053"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving complex and challenging real-world problems.</h5>
