Changed University link

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">University of Alberta</a></span>
+                  <span class="card-title"><a href="https://www.ualberta.ca/en/augustana/programs/admissions/future/index.html?gad_source=1&gbraid=0AAAAABxtSU6nQkpa-_DjhFN1wCD4OcKvj&gclid=Cj0KCQiA_qG5BhDTARIsAA0UHSLDNScYmWWIaKG8Bnr3EKnQ5ncM7lu9Bsr7n9LZCApvm31VEmS8WAIaAoHUEALw_wcB" target="_blank" class="teal-text hoverline">University of Alberta</a></span>
                 </p>
                 <p class="brown-text">Camrose, Canada</p>
                 <p>
