Added new project: hockey_database repository.

--- a/index.html
+++ b/index.html
@@ -340,6 +340,41 @@
             </div>
           </div>
         </div>
+        <!-- 1. Hockey Database Project -->
+        <div class = "row">
+          <div class="col s12 m6 l6">
+            <div class="card small">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Music Recommender" src="assets/img/mysql-logo-1-300x300.jpg" style="height: 100%; width: auto" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Hockey Database<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  A basic hockey database where I used mySQL and Flask to display my two favourite hockey teams:
+                  the Canucks and the Oilers. I practiced creating basic queries, filtering data, and storing the data in
+                  a properly structured database. 
+                </p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> CSS, HTML, Python, mySQL, Flask, SQLAlchemy</li>
+                  <li>Users can view the overall team stats for the 2024 season, in addition to individual player stats
+                      for two teams: Canucks and Oilers. 
+                  </li>
+                </ul>
+                <div class="card-action">
+                  <a aria-label="Visit the GitHub repo for project" href="https://github.com/jmsrota/Hockey_DataBase_SQL.git"
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
       <!-- add projects here-->
     </section>
