edited text for project 2

--- a/index.html
+++ b/index.html
@@ -351,9 +351,8 @@
                 <span class="card-title activator teal-text hoverline">Hockey Database<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A basic hockey database where I used mySQL and Flask to display my two favourite hockey teams:
-                  the Canucks and the Oilers. I practiced creating basic queries, filtering data, and storing the data in
-                  a properly structured database. 
+                  A basic hockey database where I used mySQL and Flask to keep track of the stats my two favourite hockey teams:
+                  the Canucks and the Oilers. 
                 </p>
               </div>
               <div class="card-reveal">
