--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                 <span class="card-title activator teal-text hoverline">Hockey Database<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A basic hockey database where I used mySQL and Flask to keep track of the stats my two favourite hockey teams:
+                  A basic hockey database where I used mySQL and Flask to keep track of the stats of my two favourite hockey teams:
                   the Canucks and the Oilers. 
                 </p>
               </div>
