--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
           </h2>
         </blockquote> -->        
-        <p>
+        <p class="text-red-300">
           I am a recent Computer Science graduate from the University of Alberta (Augustana Campus), 
           with a strong foundation in both front and back end development. Through my academic projects, 
           I have gained hands-on experience in building applications from scratch, managing time-effective projects, 
